# suzuri

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml
assets/: bg.wgsl  blit.wgsl
src/: config.rs  errors.rs  input.rs  main.rs  pty.rs
src/renderer/: atlas.rs  mod.rs
src/terminal/: cell.rs  mod.rs
